<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="asociatiataxiulcubomboane@gmail.com"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Subject"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="top"
            android:hint="Message"
            android:inputType="textNoSuggestions"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnOK"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnvoladulti"
            android:text="Send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:paddingBottom="10dp"
            android:text="@string/detaliilenoastre"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:paddingBottom="10dp"
            android:text="@string/donatiidirecte"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:paddingBottom="10dp"
            android:text="@string/undenegasiti"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textStyle="bold"></TextView>

    </LinearLayout>
</ScrollView>

